<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/text_full_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:background="@drawable/view_background"
            android:hint="@string/hint_full_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_student_code"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_code"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:background="@drawable/view_background"
            android:hint="@string/hint_student_code"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ID_number"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_ID"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:background="@drawable/view_background"
            android:hint="@string/hint_ID_number"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_phone_number"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:background="@drawable/view_background"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_email_address"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_email_address"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:background="@drawable/view_background"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_hometown"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_hometown"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:background="@drawable/view_background"
            android:hint="@string/hint_hometown"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_staying_address"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_staying_address"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:autofillHints=""
            android:background="@drawable/view_background"
            android:hint="@string/hint_staying_address"
            android:inputType="textPostalAddress"
            android:minHeight="48dp"
            android:paddingStart="8dp"
            android:paddingBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/text_date_of_birth"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout_date"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/view_background"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_format_date"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/toggle_choose_date"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/toggle_choose_date"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textOff="@string/toggle_show_calendar"
                android:textOn="@string/toggle_choose_date"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_date"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_studying_industry"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/view_background"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_computer_engineering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="clip_horizontal|center_vertical"
                android:minHeight="48dp"
                android:text="@string/radio_computer_engineering" />

            <RadioButton
                android:id="@+id/radio_computer_science"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="clip_horizontal|center_vertical"
                android:minHeight="48dp"
                android:text="@string/radio_computer_science" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_programming_language"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/linearLayout_check"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/view_background"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <CheckBox
                android:id="@+id/check_C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="clip_horizontal|center_vertical"
                android:text="@string/check_language_C" />

            <CheckBox
                android:id="@+id/check_Java"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="clip_horizontal|center_vertical"
                android:text="@string/check_language_Java" />

            <CheckBox
                android:id="@+id/check_Python"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="clip_horizontal|center_vertical"
                android:text="@string/check_language_Python" />

            <CheckBox
                android:id="@+id/check_others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="clip_horizontal|center_vertical"
                android:text="@string/check_others" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/check_agree"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/view_background"
            android:gravity="center_vertical"
            android:text="@string/check_agree_to_terms"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/button_ok" />

    </LinearLayout>

</ScrollView>



